--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,53 @@
+# =========================
 # Python
+# =========================
 __pycache__/
 *.py[cod]
-*.egg-info/
-dist/
-build/
-
-# Virtual environment
-venv/
-.venv/
-
-# Environment
+*.pyo
+*.pyd
+.Python
 .env
+.venv
+venv/
 
-# Data
+# =========================
+# Environment variables
+# =========================
+.env
+.env.*
+!.env.example
+
+# =========================
+# Database / Runtime data
+# =========================
 data/
+*.db
+*.sqlite3
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+# =========================
+# Logs / Temp
+# =========================
+*.log
+*.pid
+*.tmp
 
-# OS
+# =========================
+# OS / Editor
+# =========================
 .DS_Store
 Thumbs.db
+nul
+NUL
+
+# =========================
+# IDE / Tools
+# =========================
+.vscode/
+.idea/
+.claude/
+
+# =========================
+# Node / Frontend cache (혹시 대비)
+# =========================
+node_modules/
+dist/
